fix(Send): broken input borders fixed by adding z-index

--- a/assets/css/components/_modals.scss
+++ b/assets/css/components/_modals.scss
@@ -234,7 +234,11 @@
     }
     &.no-border { border-bottom: 0px; }
   }
-  .has-error .border-bottom { border-color: #a94442 !important; }
+  .has-error .border-bottom { 
+    z-index: 10;
+    position: relative;
+    border-color: #a94442 !important;
+  }
   label {
     font-weight: 400;
     color: darken($ccc, 45%);
